# ids-evaluation-framework

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  compose.yml  plugin_ids  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  tag-version.yml
examples/: README.md
examples/plugin_ids/: apollon_ids.py  ml_kitsune.py  ml_tree_based_ids.py
examples/run_config/: .DEMO_intra_2models_cicids17.yml.swp  DEMO_intra_1model_self_created.yml  DEMO_intra_2models_cicids17.yml  PP_EXAMPLE.yml  PP_EXAMPLE_full.yml  attack_intra_3models_cicids17.yml  attack_intra_3models_ciciot2025.yml  cross_benign_kitsune_4datasets.yml  example.config.yml  intra_dnn_dt_kdd99.yml  intra_kitsune_cicids17.yml
plugin_adversarial/: fgsm_attack.py  junk_data_attack.py  noise_attack.py
plugin_ids/: ml_decision_tree.py  ml_ids_dnn.py
plugin_runtime_metric/: cpu_load_metric.py  emission_metric.py  ram_usage_metric.py  time_metric.py
plugin_static_metric/: accuracy_metric.py  cunfusion_matrix_metric.py  f1_score_metric.py  fppv_metric.py  intrusion_detection_capability.py  matthews_correlation_coefficient.py  mttd_metric.py  pr_auc_metric.py  precision_score_metric.py  recall_score_metric.py  retrain_cost_metric.py  robustness_index_metric.py  roc_auc_metric.py  roc_curve_metric.py  time_per_sample_metric.py
run_config/: cross_3models_4datasets.yml  cross_benign_kitsune_4datasets.yml  example.config.yml  intra_3models_cicids17.yml
src/ids_eval/: cli.py  main.py
src/ids_eval/adversarial_pipeline/: adversarial_generator.py  robustness_sweep.py
src/ids_eval/config/: logging_config.py
src/ids_eval/dataset_pipeline/: data_manager.py  dataset_analyser.py  dataset_constructor.py  (+4 more)
tests/: test_metrics.py  test_setup.py
(+40 files in other folders)
